--- a/SearchJournal/Pages/SearchResults.razor
+++ b/SearchJournal/Pages/SearchResults.razor
@@ -11,7 +11,9 @@ else
 {
     if (searchResults.Count == 0)
     {
-        <p>Could not find results for "<span>@searchKey</span>"</p>
+        <div class="container text-lg-center">
+            <p>Could not find results for "<span class="font-weight-bold">@searchKey</span>"</p>
+        </div>
     }
     else
     {
@@ -26,10 +28,11 @@ else
                 <li><h4 class="text-primary"><a href="@uriBuilder.ToString()" target="_blank">@linkText</a></h4></li>
             }
         </ul>
-        <div class="mt-4 mb-4 text-center">
-            <button class="btn btn-primary btn-lg" @onclick="NavigateBackToSearchPage">Search Again</button>
-        </div>
     }
+
+    <div class="mt-4 mb-4 text-center">
+        <button class="btn btn-primary btn-lg" @onclick="NavigateBackToSearchPage">Search Again</button>
+    </div>
 }
 
 @code {
