--- a/SearchJournal/wwwroot/css/app.css
+++ b/SearchJournal/wwwroot/css/app.css
@@ -190,7 +190,7 @@ app {
     height: 80px;
     animation: spin 700ms linear infinite;
     top: 30%;
-    left: 46%;
+    left: 50%;
     z-index: 999;
     position: fixed;
 }
@@ -203,4 +203,23 @@ app {
     100% {
         transform: rotate(360deg)
     }
+}
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 80px; /* Margin bottom by footer height */
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 80px; /* Set the fixed height of the footer here */
+    background-color: #f5f5f5;
 }
