Minor styling changes and some package updates.

--- a/SearchJournal/Pages/Index.razor
+++ b/SearchJournal/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @inject NavigationManager navManager
 
-<h1 class="text-center text-primary">Search <a href="https://journal.dinobansigan.com/" target="_blank">Dino's Journal</a></h1>
+<h1 class="text-center text-dark">Search <a style="color: #045FB4;" href="https://journal.dinobansigan.com/" target="_blank">Dino's Journal</a></h1>
 <div class="text-center">
     <div class="p-2">
         <input class="form-control form-control-lg w-50 mx-auto mt-4" placeholder="Enter search keyword" @bind-value="searchKey" @onkeyup="@HandleEnterKey" />
