--- a/SearchJournal/Pages/SearchResults.razor
+++ b/SearchJournal/Pages/SearchResults.razor
@@ -1,7 +1,7 @@
 ﻿@page "/SearchResults"
 @inject NavigationManager navManager
 
-<h1 class="mb-3 text-primary text-center">Search Results</h1>
+<h1 class="mb-3 text-primary text-center text-dark">Search Results</h1>
 
 @if (searchResults == null)
 {
@@ -25,7 +25,7 @@ else
                 UriBuilder uriBuilder = new UriBuilder("https://journal.dinobansigan.com/" + result.Slug);
                 string publishedDate = result.CreateDate.ToString("yyyy-MM-dd: ");
                 string linkText = publishedDate + title;
-                <li><h4 class="text-primary"><a href="@uriBuilder.ToString()" target="_blank">@linkText</a></h4></li>
+                <li><h4 style="color: #045FB4;"><a href="@uriBuilder.ToString()" target="_blank">@linkText</a></h4></li>
             }
         </ul>
     }
