--- a/SearchJournal/wwwroot/css/app.css
+++ b/SearchJournal/wwwroot/css/app.css
@@ -1,7 +1,7 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Lora,'Palatino Linotype','Book Antiqua','New York','DejaVu serif',serif;
 }
 
 a, .btn-link {
@@ -151,7 +151,7 @@ app {
 
     .spinner {
         border: 16px solid silver;
-        border-top: 16px solid #337AB7;
+        border-top: 16px solid #045FB4;
         border-radius: 50%;
         width: 80px;
         height: 80px;
@@ -196,7 +196,7 @@ app {
 
     .spinner {
         border: 16px solid silver;
-        border-top: 16px solid #337AB7;
+        border-top: 16px solid #045FB4;
         border-radius: 50%;
         width: 80px;
         height: 80px;
@@ -235,4 +235,8 @@ body {
     width: 100%;
     height: 80px; /* Set the fixed height of the footer here */
     background-color: #f5f5f5;
+}
+
+.footer a {
+    color: #045FB4;
 }
